# Interoperability-Superintelligences-Architecture-at-Meta-model-of-Simbolic-Field-

./: .env.example  .gitignore  Avatar.rb  Interoperability-Protocol.md  InteroperabilitySuperintelligences.cabal  README.md  UNIFIED-SUPERINTELLIGENCE.nd  _config.yml  avatarostb.gemspec  avatarostb.rb  cabal.project  completely.license.md  interoperability_superintelligences.gemspec  license-symbolic  license.md  metaverseostb.gemspec  metaverseostb.rb  package-lock.json  package.json  plaintext-semantic-languege  repository-manfest  server.js  symbolic-field.cabal  symbolic-license.txt  xboxquest_interplanetary_os.gemspec
.github/workflows/: gem-push.yml  haskell.yml  haskellcahce.yml  jekyll-docker.yml  jekyll-gh-pages.yml  jekyll.yml  ruby.yml  rubycdi.yml  rubyclibuidanddeploy.yml  rubyonrails.yml  xboxquest-gem.yml
Cabalistic/: Cabalistic.cabal
Interoperability-Superintelligences/src/: Main.hs  MeshNode.hs  MeshSupervisor.hs  OriginNode.hs  PipelineManager.hs
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
lib/: interoperability_superintelligences.rb  xboxquest_interplanetary_os.rb
public/: index.html
src/: SymbolicField.hs
