cabal-version:      2.4
name:               symbolic-field
version:            0.1.0.0
synopsis:           Interoperability Superintelligences Architecture at Meta-model of Symbolic Field
description:        A framework for interoperability of superintelligences at the meta-model of the symbolic field.
license:            MIT
author:             Alexandre Pedrosa
maintainer:         alexandrepedrosaai
build-type:         Simple

library
    exposed-modules:  SymbolicField
    build-depends:
        base       >= 4.13 && < 5,
        containers >= 0.6 && < 0.8,
        text       >= 1.2 && < 2.2
    hs-source-dirs:   src
    default-language: Haskell2010
